--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ TDX_CLIENT_ID=
 TDX_CLIENT_SECRET=
 
 # Telegram Bot 配置 (必填)
-TELEGRAM_BOT_TOKEN=7943872234:AAFwxYwUT4KOChlhQxrOHmSzUUZEYtzPx3o
-TELEGRAM_CHAT_ID=6828979094
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
 
 # 监控配置
 MONITOR_START_HOUR=18
