--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,26 @@
-debug_api.go
-explore_api.go
-test_fixed_api.go
-test_new_api.go
-test_tdx.go
-*.md
+# 編譯產物
+main
+*.exe
+
+# 測試和除錯文件
+cmd/debug/
+*.log
+
+# 開發文件
+.env
+.env.example
+responses.log
+
+# Git
 .git
 .gitignore
+
+# 文檔
+README.md
+CLAUDE.md
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
